[gd_scene load_steps=14 format=2]

[ext_resource path="res://imagenes/moneda.png" type="Texture" id=1]
[ext_resource path="res://imagenes/fondo.png" type="Texture" id=2]
[ext_resource path="res://scripts/pantalla_principal.gd" type="Script" id=3]
[ext_resource path="res://imagenes/imagen para girar las monedas.png" type="Texture" id=4]
[ext_resource path="res://imagenes/salir menor opacidad.png" type="Texture" id=5]
[ext_resource path="res://imagenes/salir.png" type="Texture" id=6]
[ext_resource path="res://imagenes/btn ayuda.png" type="Texture" id=7]
[ext_resource path="res://imagenes/btn ayuda menor opacidad.png" type="Texture" id=8]
[ext_resource path="res://fuente.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/mejor punt.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=2]
extra_spacing_char = 3
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 9 )

[node name="pantalla_principal" type="Node"]
script = ExtResource( 3 )

[node name="fondo" type="TextureRect" parent="."]
margin_left = -120.0
margin_top = -32.0
margin_right = 1246.0
margin_bottom = 736.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="girador de monedas" type="Sprite" parent="fondo"]
position = Vector2( 632, 320 )
texture = ExtResource( 4 )

[node name="moneda" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 0, -208 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda2" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -96, -184 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda3" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -168, -120 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda4" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -208, -32 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda5" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -200, 64 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda6" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -152, 152 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda7" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( -64, 200 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda8" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 32, 208 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda9" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 120, 168 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda10" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 184, 96 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda11" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 208, 0 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda12" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 184, -104 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="moneda13" type="Sprite" parent="fondo/girador de monedas"]
position = Vector2( 104, -176 )
scale = Vector2( 0.208, 0.204 )
texture = ExtResource( 1 )

[node name="boton_jugar" type="Button" parent="."]
margin_left = 448.0
margin_top = 256.0
margin_right = 576.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="Label" parent="."]
margin_top = 216.0
margin_right = 1024.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
text = "Coin Collector"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_ayuda" type="TextureButton" parent="."]
margin_left = 936.0
margin_top = 552.0
margin_right = 960.0
margin_bottom = 576.0
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boton_salir" type="TextureButton" parent="."]
margin_left = 24.0
margin_top = 536.0
margin_right = 72.0
margin_bottom = 584.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mejor punt" type="Label" parent="."]
margin_right = 992.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Mejor puntuaci√≥n: 0"
align = 2
valign = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="boton_jugar" to="." method="_on_boton_jugar_button_up"]
[connection signal="button_up" from="boton_ayuda" to="." method="_on_ayuda_button_up"]
[connection signal="button_up" from="boton_salir" to="." method="_on_salir_button_up"]
